Fix layout bug for city cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@ body{
     color: #3a3a3a;
     background: #ccc;
     line-height: 1.6;
-}
+   
+} 
 
  /*navigation and logo styling */
 h1, h2{
@@ -304,6 +305,8 @@ footer {
 
 /*card layout*/
 
+
+
 .card{
     max-width: 400px;
     text-align: center;
@@ -320,13 +323,18 @@ footer {
 }
 
 .widecard {
-    height: 20vh;
+    min-height: 20vh;
     padding: 5px;
     max-width: 70%;
     margin: 0 auto;
     border: solid 2px grey;
     margin-bottom: 50px;
     border-radius: 8px;
+
+    display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  flex-direction: column;
     
 }
 
@@ -355,3 +363,160 @@ footer {
     float: right;
 }
 
+/* test card  */
+.product{
+    position: relative;
+    width: 1000px;
+    min-width: 350px;
+    min-height: 500px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product-img{
+    width: 60%;
+    height: 500px;
+    background: #fff;
+    position: relative;
+    opacity: 0;
+    transform: translateY(-50px);
+    animation: fade-in 1s forwards 1;
+}
+
+.product-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    user-select: none;
+}
+
+.tag{
+    position: absolute;
+    top: 20px;
+    left: -10px;
+    transform-origin: left;
+    opacity: 0;
+    transform: rotate(-90deg);
+    text-transform: capitalize;
+    color: #eae3d2;
+    padding: 5px 10px;
+    width: 100px;
+    font-size: 18px;
+    text-align: center;
+    background: #292929;
+    user-select: none;
+    /* animation: tag .5s 1s forwards 1; */
+}
+
+@keyframes tag{
+    100%{
+        opacity: 1;
+        transform: rotate(-20deg);
+    }
+}
+
+.product-listing{
+    width: 40%;
+    min-height: 500px;
+    height: auto;
+    background: #292929;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    color: #eae3d2;
+    opacity: 0;
+    transform: translateY(50px);
+    animation: fade-in 1s forwards 1;
+}
+
+@keyframes fade-in{
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.city{
+    
+    position: relative;
+   
+    min-width: 350px;
+    min-height: 200px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+
+#cities{
+    background-color: pink;
+    width: 85%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+
+.cityimage{
+  
+    display: flex;
+    width: 60%;
+}
+
+.cityinfo{
+    display: flex;
+    width:40%;
+    text-align: center;
+}
+
+.cityimage img{
+   
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+@media (max-width: 900px){
+    
+    .product{
+        flex-direction: column;
+        width: 70%;
+        margin: 5vh 0;
+    }
+
+    .city{
+        flex-direction: column;
+        width: 100%;
+       s /* margin: 5vh 0; */
+    }
+
+    .cityinfo{
+        width: 100%;
+    }
+
+    .cityimage{
+        display: flex;
+        align-items: center;
+        width: 100%;
+    }
+    .product-img{
+        width: 100%;
+        height: 300px;
+    }
+    .product-listing{
+        width: 100%;
+        min-height: auto;
+    }
+    .name,.price{
+        font-size: 50px;
+    }
+    .info{
+        font: 16px;
+    }
+}
